--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
-    "socket.io-client": "^4.8.3"
+    "@types/uuid": "^10.0.0",
+    "socket.io-client": "^4.8.3",
+    "uuid": "^13.0.0"
   }
 }
